--- a/JMLearnMaui/MonkeyFinder/MonkeyFinder/Platforms/iOS/Info.plist
+++ b/JMLearnMaui/MonkeyFinder/MonkeyFinder/Platforms/iOS/Info.plist
@@ -13,6 +13,8 @@
 	<array>
 		<string>arm64</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Check location for functions to determine how far away a monkey is</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
